header/footer and connect component

--- a/projects/pangea-bet-app/src/app/app.component.html
+++ b/projects/pangea-bet-app/src/app/app.component.html
@@ -1,2 +1,13 @@
-
-<router-outlet></router-outlet>
+<main>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <p>IPL Betting</p>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <mat-toolbar color="primary">
+    <p>Copyrights 2021</p>
+  </mat-toolbar>
+</main>
